; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_Clear.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_randomizer.c_randomizer_Clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.randomizer = type { i64, i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @randomizer_Clear(%struct.randomizer* %0) #0 {
  %2 = alloca %struct.randomizer*, align 8
  store %struct.randomizer* %0, %struct.randomizer** %2, align 8
  %3 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %4 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %3, i32 0, i32 3
  %5 = call i32 @vlc_vector_clear(i32* %4)
  %6 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %7 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %6, i32 0, i32 2
  store i64 0, i64* %7, align 8
  %8 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %9 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load %struct.randomizer*, %struct.randomizer** %2, align 8
  %11 = getelementptr inbounds %struct.randomizer, %struct.randomizer* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}

declare dso_local i32 @vlc_vector_clear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
